@@ -17,9 +17,19 @@ class Integer(Char):
         self.entry.set_max_length(0)
         self.entry.set_alignment(1.0)
         self.entry.connect('insert_text', self.sig_insert_text)
+        self.factor = float(attrs.get('factor', 1))
+
+    @property
+    def modified(self):
+        if self.record and self.field:
+            entry = self.entry.get_child() if self.autocomplete else self.entry
+            value = entry.get_text() or ''
+            return self.field.get_client(self.record, self.factor) != value
+        return False
 
     def set_value(self, record, field):
-        return field.set_client(record, self.entry.get_text())
+        return field.set_client(record, self.entry.get_text(),
+            factor=self.factor)
 
     def display(self, record, field):
         # skip Char call because set_text doesn't work with int
@@ -27,7 +37,7 @@ class Integer(Char):
         if not field:
             self.entry.set_text('')
             return False
-        self.entry.set_text(field.get_client(record))
+        self.entry.set_text(field.get_client(record, factor=self.factor))
 
     def sig_insert_text(self, entry, new_text, new_text_length, position):
         value = entry.get_text()
