@@ -1,3 +1,4 @@
+* Add factor on number widgets
 * Add calendar view
 * Add URL entry
 * Remove request
